--- a/.github/workflows/mai-utils-cd.yml
+++ b/.github/workflows/mai-utils-cd.yml
@@ -12,23 +12,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
 
-      # Step 3: Install dependencies for versioning and publishing
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine bump2version
 
-      # Step 4: Check for changes in mai/utils
+
+      - name: Check for setup.py
+        run: |
+            if [ -f "mai/utils/setup.py" ]; then
+            echo "setup.py found"
+            else
+            echo "setup.py not found in mai/utils"
+            exit 1
+            fi
+
       - name: Check for changes in mai/utils
         id: changes
         run: |
@@ -39,7 +47,6 @@ jobs:
             echo "Changes detected in mai/utils"
           fi
 
-      # Step 5: Bump the version
       - name: Bump version
         id: version
         run: |
@@ -51,13 +58,11 @@ jobs:
           fi
         working-directory: mai/utils
 
-      # Step 6: Build the package
       - name: Build package
         run: |
           python setup.py sdist bdist_wheel
         working-directory: mai/utils
 
-      # Step 7: Publish to PyPI
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: "__token__"
