--- a/.github/workflows/mai-utils-cd.yml
+++ b/.github/workflows/mai-utils-cd.yml
@@ -27,7 +27,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine bump2version
-
+      
+      - name: Configure Git user
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
   
       - name: Check for changes in mai/utils
         id: changes
